few GUI changes
- EFI plot now uses user-defined y-limits
- plot background adjusted to window background
- cursor in plotting area changed to crosshair

--- a/gui/ui_mainWindow.ui
+++ b/gui/ui_mainWindow.ui
@@ -461,7 +461,11 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
       <item>
-       <widget class="MatplotlibWidget" name="pltMain" native="true"/>
+       <widget class="MatplotlibWidget" name="pltMain" native="true">
+        <property name="cursor">
+         <cursorShape>CrossCursor</cursorShape>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
