--- a/gui/plots/ui_plotEFI.ui
+++ b/gui/plots/ui_plotEFI.ui
@@ -35,7 +35,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QLineEdit" name="txtSteps">
+        <widget class="QLineEdit" name="txtXSteps">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
