--- a/gui/ui_dialogMaterial.ui
+++ b/gui/ui_dialogMaterial.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>dlgMaterialEditor</class>
  <widget class="QDialog" name="dlgMaterialEditor">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>303</width>
-    <height>381</height>
+    <height>435</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,13 +49,13 @@
          <attribute name="title">
           <string>Optical Properties</string>
          </attribute>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
+         <layout class="QVBoxLayout" name="verticalLayout">
           <item>
            <widget class="QGroupBox" name="groupBox_2">
             <property name="title">
              <string>Refractive Index</string>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout">
+            <layout class="QVBoxLayout" name="verticalLayout_2">
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout">
                <item>
@@ -69,6 +72,9 @@
                 <widget class="QLineEdit" name="txtRefrIndex">
                  <property name="text">
                   <string>1.0</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                  </property>
                 </widget>
                </item>
@@ -94,6 +100,9 @@
                  <property name="text">
                   <string>0.0</string>
                  </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
                 </widget>
                </item>
                <item row="1" column="1">
@@ -106,6 +115,9 @@
                  </property>
                  <property name="text">
                   <string>0.0</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                  </property>
                 </widget>
                </item>
@@ -134,6 +146,9 @@
                  <property name="text">
                   <string>0.0</string>
                  </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
                 </widget>
                </item>
                <item row="0" column="4">
@@ -160,6 +175,9 @@
                  </property>
                  <property name="text">
                   <string>0.0</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                  </property>
                 </widget>
                </item>
@@ -188,6 +206,9 @@
                  <property name="text">
                   <string>0.0</string>
                  </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
                 </widget>
                </item>
                <item row="1" column="5">
@@ -200,6 +221,37 @@
                  </property>
                  <property name="text">
                   <string>0.0</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rbRefrIndexFile">
+               <property name="text">
+                <string>From File</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_3">
+               <item>
+                <widget class="QLineEdit" name="txtRefrIndexFile">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="btnRefrIndexFile">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="text">
+                  <string>Select File...</string>
                  </property>
                 </widget>
                </item>
@@ -251,8 +303,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>257</x>
+     <y>425</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -267,12 +319,44 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>293</x>
+     <y>425</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
      <y>274</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>rbRefrIndexFile</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>txtRefrIndexFile</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>59</x>
+     <y>230</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>63</x>
+     <y>254</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>rbRefrIndexFile</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>btnRefrIndexFile</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>102</x>
+     <y>230</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>201</x>
+     <y>256</y>
     </hint>
    </hints>
   </connection>
