--- a/gui/ui_mainWindow.ui
+++ b/gui/ui_mainWindow.ui
@@ -529,8 +529,15 @@
     </property>
     <addaction name="actionExport"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuPlot"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="stbStatus"/>
   <action name="actionQuit">
@@ -556,6 +563,11 @@
   <action name="actionExport">
    <property name="text">
     <string>Export PDF...</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About...</string>
    </property>
   </action>
  </widget>
