--- a/gui/ui_mainWindow.ui
+++ b/gui/ui_mainWindow.ui
@@ -274,6 +274,16 @@
             <property name="text">
              <string>Wizard...</string>
             </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>icons/Gnome-applications-science.svg</normaloff>icons/Gnome-applications-science.svg</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>16</width>
+              <height>16</height>
+             </size>
+            </property>
            </widget>
           </item>
          </layout>
